kinda fixed spacing

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -109,11 +109,7 @@ a {
   color: #24292e;
   border-bottom: 9px solid rgb(255, 229, 83);
   width: fit-content;
-  margin-bottom: -24px;
-}
-
-.experience-dark {
-  color: #eee;
+  margin-bottom: 45px;
 }
 
 .burghy {
@@ -135,14 +131,9 @@ a {
   transition: all 0.3s ease-in-out;
 }
 
-.lineup-dark {
-  background: #eee;
-}
-
 .lineup-active {
   height: 4px;
   width: 28px;
-
   align-self: flex-start;
   transition: all 0.3s ease-in-out;
   transform: rotate(45deg) translate(0px, 7px);
@@ -436,34 +427,9 @@ header {
   }
 }
 
-.contact-title {
-  margin-bottom: -14px;
-}
-
-.contact-title-dark {
-  color: #eee;
-}
-
-.mailto {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 1em;
-  font-weight: 400;
-  text-decoration: none;
-  border-bottom: 6px solid rgb(255, 229, 83);
-  margin-left: 2px;
-  margin-right: 2px;
-}
-
-.blog-post-container {
-  padding-top: 0px;
-  margin-top: 45px;
+.post-container {
+  margin-top: -24px;
   margin-bottom: 58px;
-  hr {
-    margin-top: 1px;
-    margin-bottom: 1%;
-    border: 1px solid #fff;
-  }
 }
 
 .post-title {
